# SoftwareEngineeringWorkbench

./: README.md  architecture_generator.py  cli.py  config.py  document_processor.py  example_usage.py  main.py  models.py  pyproject.toml  streamlit_app.py  test_architecture.md
